// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle render element-react with head 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  >
    <div>
      <p>
        sss1123
      </p>
    </div>
  </div>
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render element-react with tail 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  >
    <div>
      <p>
        sss1123
      </p>
    </div>
  </div>
</div>
`;

exports[`Circle render state changing 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   changing"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render state default 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render state modified 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   modified"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render with head 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head string"
    data-testid="circleHead"
  >
    s
  </div>
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render with index 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  >
    2
  </p>
  <div
    class="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render with letter 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    >
      3
    </p>
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render with prop isSmall true 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle  small default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;

exports[`Circle render with tail 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-testid="circleTail"
  >
    S
  </div>
</div>
`;

exports[`Circle render without letter 1`] = `
<div
  class="content "
  data-testid="circle-test"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circleHead"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circleLetter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circleIndex"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circleTail"
  />
</div>
`;
